# ninja

./: CMakeLists.txt
.circleci/: config.yml
converter/testing/: build.ninja
convertorTest/: build.ninja.cc  build2.h  hello.cc  manifest.h  shadowdash.cpp
new/: .clang-tidy  CMakeLists.txt  hello.cpp
src/: manifest_parser.cc  ninja.cc
src/shadowdash/: manifest.h
